--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -31,3 +31,10 @@
 
 - id: code_copied
   translation: "Copié !"
+
+- id: Projects
+  translation: "Projets"
+
+- id: Experiences
+  translation: "Expériences"
+  
